# SiamQuantum-Atlas

./: .env.example  .gitignore  CLAUDE.md  LICENSE  MEMORY.md  Makefile  README.md  README.th.md  app.py  claudeprompt.json  doc.md  docker-compose.yml  main.py  pygame_viewer.py  pyproject.toml  requirements.txt  supabase_setup.sql  vercel.json
.claude/: settings.local.json
.github/workflows/: ci.yml
api/: index.py  requirements.txt
configs/: keywords_th_en.yaml  platforms.yaml  scoring.yaml
data/exports/: siamquantum_atlas.json
data/exports/intelligence_test/: quantum_intelligence_report.json  quantum_intelligence_report.md  quantum_items.jsonl  (+1 more)
data/processed/: siamquantum_atlas.db
data/runtime/: gdelt_api.last_request
data/samples/: thai_quantum_media.json
docs/: prefect.md
scripts/: audit_backfill.py  audit_step2.py  audit_step2_nlp.py  audit_step3_dedup.py  download_geoip.sh  init_db.py  prefect_deploy_local.py  ti43b_ingest.sh
siamquantum_atlas/: cli.py  logging.py  settings.py
siamquantum_atlas.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
siamquantum_atlas/adapters/: base.py  film_tv.py  gdelt.py  gdelt_live.py  podcasts.py  reddit_live.py  trends.py  youtube.py  youtube_live.py
siamquantum_atlas/clustering/: comm_value.py  graph_clusters.py  semantic.py  timeline.py
siamquantum_atlas/db/: models.py  session.py
siamquantum_atlas/geo/: thai_geo.py
siamquantum_atlas/graph/: arena3d_exporter.py  builder.py
siamquantum_atlas/ingestion/: dedupe.py  engagement_normalizer.py  normalization.py  pipelines.py  realtime_pipeline.py
siamquantum_atlas/llm/: anthropic_client.py  extractors.py  schemas.py
siamquantum_atlas/nlp/: embeddings.py  entities.py  frames.py  scoring.py  thai_preprocess.py  triplets.py
siamquantum_atlas/reporting/: csv_report.py  intelligence_report.py  markdown_report.py
siamquantum_atlas/utils/: files.py  hashes.py  viewer_tools.py
src/siamquantum/: __main__.py  cli.py  config.py  models.py
supabase/migrations/: 20260429_auth_profiles_submitted_data.sql
tests/: test_adapters.py  test_arena_export.py  test_cli.py  test_clustering.py  test_cse_quota.py  test_dedupe.py  test_engagement_bootstrap.py  test_live_adapters.py  test_llm_schemas.py  test_phase4.py  test_phase8.py  test_prefect_flows.py  test_services.py  test_stats.py  test_viewer.py  test_viewer_server.py  test_viewer_tools.py
viewer/: build_realtime_graph.py  fetcher.py  index.html  server.py
viewer/data/: siamquantum_atlas_graph.json
(+61 files in other folders)
