[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "siamquantum-atlas"
version = "0.1.0"
description = "Python-first Thai quantum media analysis and Arena3Dweb export pipeline."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "OpenAI Codex" }]
dependencies = [
  "typer>=0.12,<1.0",
  "rich>=13.7,<14.0",
  "pydantic>=2.8,<3.0",
  "pydantic-settings>=2.4,<3.0",
  "sqlalchemy>=2.0,<3.0",
  "httpx>=0.27,<1.0",
  "pandas>=2.2,<3.0",
  "numpy>=1.26,<3.0",
  "PyYAML>=6.0,<7.0",
  "python-dotenv>=1.0,<2.0",
  "scikit-learn>=1.5,<2.0",
  "networkx>=3.3,<4.0",
  "apscheduler>=3.10,<4.0",
  "anthropic>=0.34,<1.0",
  "langdetect>=1.0.9,<2.0",
  "psycopg[binary]>=3.2,<4.0",
  "pgvector>=0.3,<1.0",
  "streamlit>=1.37,<2.0",
  "pytest>=8.3,<9.0",
]

[project.optional-dependencies]
thai = ["pythainlp>=5.0,<6.0"]
ml = [
  "sentence-transformers>=3.0,<4.0",
  "hdbscan>=0.8.38,<1.0",
  "python-igraph>=0.11,<1.0",
  "leidenalg>=0.10,<1.0",
  "torch>=2.0",
  "transformers>=4.40",
]

[tool.setuptools.packages.find]
include = ["siamquantum_atlas*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
