[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "siamquantum-atlas"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27",
    "tenacity>=8.2",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "python-dotenv>=1.0",
    "typer>=0.12",
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "jinja2>=3.1",
    "anthropic>=0.28",
    "geoip2>=4.8",
    "numpy>=1.26",
    "scipy>=1.13",
    "scikit-learn>=1.5",
    "pandas>=2.2",
    "openpyxl>=3.1",
    "pythainlp>=5.0",
    "dnspython>=2.6",
    "pymannkendall>=1.4",
    "beautifulsoup4>=4.12",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.10",
    "ruff>=0.4",
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
]

[project.scripts]
siamquantum = "siamquantum.cli:app"
app = "siamquantum.viewer.server:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.mypy]
strict = true
python_version = "3.10"
files = ["src/siamquantum"]

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
